--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "preferGlobal": true,
   "dependencies": {
     "chalk": "^4.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/csantosr/random-elon-quote.git"
+  },
+  "bugs": {
+    "url": "https://github.com/csantosr/random-elon-quote/issues"
+  },
+  "homepage": "https://github.com/csantosr/random-elon-quote#readme"
 }
